// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/atoms/Button Normal 1`] = `
<button
  className="a-button a-button-primary"
  disabled={false}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Components/atoms/Heading Normal 1`] = `
<h2
  className="a-heading a-heading-raisinBlack a-heading-400 a-heading-uppercase a-heading-undefined"
>
  Testing Heading
</h2>
`;

exports[`Storyshots Components/atoms/Icon Normal 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#ddd",
      "display": "flex",
      "flexWrap": "wrap",
      "padding": 10,
    }
  }
>
  <div
    style={
      Object {
        "marginLeft": 7,
      }
    }
  >
    <i
      className="a-icon a-icon-facebook a-icon-24"
    />
  </div>
  <div
    style={
      Object {
        "marginLeft": 7,
      }
    }
  >
    <i
      className="a-icon a-icon-youtube a-icon-24"
    />
  </div>
  <div
    style={
      Object {
        "marginLeft": 7,
      }
    }
  >
    <i
      className="a-icon a-icon-zalo a-icon-24"
    />
  </div>
  <div
    style={
      Object {
        "marginLeft": 7,
      }
    }
  >
    <i
      className="a-icon a-icon-arrowDownBlack a-icon-24"
    />
  </div>
  <div
    style={
      Object {
        "marginLeft": 7,
      }
    }
  >
    <i
      className="a-icon a-icon-arrowDownGrey a-icon-24"
    />
  </div>
  <div
    style={
      Object {
        "marginLeft": 7,
      }
    }
  >
    <i
      className="a-icon a-icon-arrowNextRed a-icon-24"
    />
  </div>
  <div
    style={
      Object {
        "marginLeft": 7,
      }
    }
  >
    <i
      className="a-icon a-icon-arrowNextGrey a-icon-24"
    />
  </div>
  <div
    style={
      Object {
        "marginLeft": 7,
      }
    }
  >
    <i
      className="a-icon a-icon-eyeOpen a-icon-24"
    />
  </div>
</div>
`;

exports[`Storyshots Components/atoms/Image Normal 1`] = `
<div
  style={
    Object {
      "maxWidth": "650px",
    }
  }
>
  <div
    className="a-image a-image-1x1"
  >
    <img
      alt="banner"
      loading="lazy"
      src="banner1.png"
    />
  </div>
</div>
`;

exports[`Storyshots Components/atoms/Input Normal 1`] = `
<div
  className="a-input"
>
  <div
    className="a-input_wrap"
  >
    <input
      autoComplete="off"
      className="a-input_input"
      disabled={false}
      name="test"
      placeholder="Dummy text"
      type={false}
    />
  </div>
</div>
`;

exports[`Storyshots Components/atoms/Link Normal 1`] = `
Array [
  <a
    aria-current={null}
    className="a-link "
    href="/home"
    onClick={[Function]}
    target="_self"
  >
    Home
  </a>,
  " ",
  <a
    aria-current={null}
    className="a-link "
    href="/about"
    onClick={[Function]}
    target="_self"
  >
    About
  </a>,
]
`;

exports[`Storyshots Components/atoms/Link Use External 1`] = `
<a
  className="a-link "
  href="https://google.com.vn"
  rel="noreferrer"
  target="_blank"
>
  Google
</a>
`;

exports[`Storyshots Components/atoms/Text Normal 1`] = `
<p
  className="a-text a-text-spanishGreen a-text-undefined a-text-mm a-text-400"
>
  Dummy text
</p>
`;

exports[`Storyshots Components/molecules/Pulldown Normal 1`] = `
<div
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="m-pulldown"
  >
    <div
      className=" css-2b097c-container"
      onKeyDown={[Function]}
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-1wxtc0p-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1733mh3-ValueContainer"
        >
          <div
            className=" css-t6598d-placeholder"
          >
            Chọn Quận/Huyện
          </div>
          <div
            className="css-b8ldur-Input"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "label": "input",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            className=" css-xnkoxx-indicatorContainer"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <img
              alt="icon-arrow"
              src="ic_carret_down.svg"
              style={
                Object {
                  "transform": false,
                  "transition": "all 0.3s ease",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/organisms/Carousel Banner 1`] = `
<div
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="o-carousel o-carousel-hasarrow"
  >
    <div
      className="slick-slider slick-initialized"
      dir="ltr"
    >
      <div
        className="o-carousel_arrow o-carousel_arrow_prev slick-arrow slick-prev slick-disabled banner"
        onClick={null}
      />
      <div
        className="slick-list"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={null}
        onMouseMove={null}
        onMouseUp={[Function]}
        onTouchCancel={null}
        onTouchEnd={[Function]}
        onTouchMove={null}
        onTouchStart={[Function]}
        style={Object {}}
      >
        <div
          className="slick-track"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "WebkitTransform": "translate3d(0px, 0px, 0px)",
              "WebkitTransition": "",
              "msTransform": "translateX(0px)",
              "opacity": 1,
              "transform": "translate3d(0px, 0px, 0px)",
              "transition": "",
            }
          }
        >
          <div
            aria-hidden={false}
            className="slick-slide slick-active slick-current"
            data-index={0}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    <img
                      alt="banner"
                      src="banner1.png"
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={1}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    <img
                      alt="banner"
                      src="banner1.png"
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={2}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    <img
                      alt="banner"
                      src="banner1.png"
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="o-carousel_arrow o-carousel_arrow_next slick-arrow slick-next banner"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/organisms/Carousel Normal 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#fff",
      "marginLeft": "60px",
      "marginRight": "60px",
      "paddingBottom": "60px",
    }
  }
>
  <div
    className="o-carousel"
  >
    <div
      className="slick-slider slick-initialized"
      dir="ltr"
    >
      <div
        className="slick-list"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={null}
        onMouseMove={null}
        onMouseUp={[Function]}
        onTouchCancel={null}
        onTouchEnd={[Function]}
        onTouchMove={null}
        onTouchStart={[Function]}
        style={Object {}}
      >
        <div
          className="slick-track"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "WebkitTransform": "translate3d(0px, 0px, 0px)",
              "WebkitTransition": "",
              "msTransform": "translateX(0px)",
              "opacity": 1,
              "transform": "translate3d(0px, 0px, 0px)",
              "transition": "",
            }
          }
        >
          <div
            aria-hidden={false}
            className="slick-slide slick-active slick-current"
            data-index={0}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    a
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={false}
            className="slick-slide slick-active"
            data-index={1}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    b
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={false}
            className="slick-slide slick-active"
            data-index={2}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    c
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={false}
            className="slick-slide slick-active"
            data-index={3}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    a
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={4}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    b
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={5}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    c
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={6}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    a
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={7}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    b
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={8}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="o-carousel_wrap"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="o-carousel_item"
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "#ccc",
                        "height": 600,
                      }
                    }
                  >
                    c
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        className="slick-dots o-carousel_dots"
        onMouseEnter={null}
        onMouseLeave={null}
        onMouseOver={null}
        style={
          Object {
            "display": "block",
          }
        }
      >
        <li
          className="slick-active"
        >
          <span
            className="o-carousel_dot"
            onClick={[Function]}
          />
        </li>
        <li
          className=""
        >
          <span
            className="o-carousel_dot"
            onClick={[Function]}
          />
        </li>
        <li
          className=""
        >
          <span
            className="o-carousel_dot"
            onClick={[Function]}
          />
        </li>
        <li
          className=""
        >
          <span
            className="o-carousel_dot"
            onClick={[Function]}
          />
        </li>
        <li
          className=""
        >
          <span
            className="o-carousel_dot"
            onClick={[Function]}
          />
        </li>
        <li
          className=""
        >
          <span
            className="o-carousel_dot"
            onClick={[Function]}
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/organisms/Container Normal 1`] = `
<div
  className="container o-container"
>
  <p>
    What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
  </p>
</div>
`;

exports[`Storyshots Components/organisms/Container Row Container 1`] = `
<div
  className="container o-container"
>
  <div
    className="o-container_row row"
  >
    <div
      className="o-container_col col-lg-6"
    >
      <p>
        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
      </p>
      <p
        className="u-mt-16 u-mt-sm-42"
      >
        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
      </p>
    </div>
    <div
      className="o-container_col col-lg-6"
    >
      <p>
        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/organisms/Footer Normal 1`] = `
<footer
  className="o-footer"
  style={
    Object {
      "backgroundImage": "url(bg-footer.png)",
    }
  }
>
  <div
    className="o-footer_background"
  >
    <img
      alt="background footer"
      src="bg-footer.png"
    />
  </div>
  <div
    className="container o-container"
  >
    <div
      className="o-footer_main"
    >
      <div
        className="o-container_row row"
      >
        <div
          className="o-container_col col-lg-8"
        >
          <div
            className="o-footer_main_menu"
          >
            <div
              className="o-footer_main_menu_top"
            >
              <div
                className="o-footer_main_logo"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-220x145"
                  >
                    <img
                      alt="novaland logo"
                      loading="lazy"
                      src="footer-logo.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="o-footer_main_info"
              >
                <p
                  className="a-text a-text-400 a-text-white a-text-uppercase a-text-14x22"
                >
                  CÔNG TY CỔ PHẦN TẬP ĐOÀN ĐẦU TƯ ĐỊA ỐC NOVA
                </p>
                <div
                  className="mt-8"
                >
                  <p
                    className="a-text a-text-400 a-text-white a-text-opacity07"
                  >
                    Giấy chứng nhận đăng ký doanh nghiệp số 0301444753 do Sở Kế hoạch và Đầu tư TP.HCM cấp lần đầu ngày 18/09/1992
                  </p>
                  <br />
                  <p
                    className="a-text a-text-400 a-text-white a-text-opacity07"
                  >
                    Tòa nhà văn phòng Novaland, 65 Nguyễn Du, Phường Bến Nghé, Quận 1, Thành phố Hồ Chí Minh
                  </p>
                </div>
                <div
                  className="o-footer_main_contact"
                >
                  <div
                    className="o-footer_main_contact_item"
                  >
                    <p
                      className="a-text a-text-400 a-text-white a-text-opacity07"
                    >
                      Email:
                    </p>
                    <a
                      className="a-link "
                      href="mailto:info@novaland.com.vn"
                      rel="noreferrer"
                      target="_self"
                    >
                      <p
                        className="a-text a-text-400 a-text-white a-text-700 a-text-inline"
                      >
                        info@novaland.com.vn
                      </p>
                    </a>
                  </div>
                  <div
                    className="o-footer_main_contact_item"
                  >
                    <p
                      className="a-text a-text-400 a-text-white a-text-opacity07"
                    >
                      Tổng đài CSKH:
                    </p>
                    <a
                      className="a-link "
                      href="tel:1900636666"
                      rel="noreferrer"
                      target="_self"
                    >
                      <p
                        className="a-text a-text-400 a-text-white a-text-700 a-text-inline"
                      >
                        1900 63 6666
                      </p>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="o-container_col col-lg-4"
        >
          <div
            className="o-footer_main_form"
          >
            <div
              className="o-form"
            >
              <form
                noValidate={true}
                onSubmit={[Function]}
              >
                <div
                  className="o-footer_main_form_input"
                >
                  <div
                    className="a-input a-input-text"
                  >
                    <div
                      className="a-input_wrap"
                    >
                      <input
                        className="a-input_input"
                        name="fullname"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Họ và tên"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="o-footer_main_form_input"
                >
                  <div
                    className="a-input a-input-text"
                  >
                    <div
                      className="a-input_wrap"
                    >
                      <input
                        className="a-input_input"
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Số điện thoại"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="o-footer_main_form_input"
                >
                  <div
                    className="a-input a-input-text"
                  >
                    <div
                      className="a-input_wrap"
                    >
                      <input
                        className="a-input_input"
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Email"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="o-footer_main_form_input"
                >
                  <div
                    className="m-pulldown"
                  >
                    <div
                      className=" css-2b097c-container"
                      onKeyDown={[Function]}
                    >
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        className="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        className=" css-1wxtc0p-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className=" css-1733mh3-ValueContainer"
                        >
                          <div
                            className=" css-t6598d-placeholder"
                          >
                            - Dự án khách hàng quan tâm -
                          </div>
                          <div
                            className="css-b8ldur-Input"
                          >
                            <div
                              className=""
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-autocomplete="list"
                                autoCapitalize="none"
                                autoComplete="off"
                                autoCorrect="off"
                                disabled={false}
                                id="react-select-3-input"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                spellCheck="false"
                                style={
                                  Object {
                                    "background": 0,
                                    "border": 0,
                                    "boxSizing": "content-box",
                                    "color": "inherit",
                                    "fontSize": "inherit",
                                    "label": "input",
                                    "opacity": 1,
                                    "outline": 0,
                                    "padding": 0,
                                    "width": "1px",
                                  }
                                }
                                tabIndex="0"
                                type="text"
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          className=" css-1hb7zxy-IndicatorsContainer"
                        >
                          <div
                            aria-hidden="true"
                            className=" css-xnkoxx-indicatorContainer"
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                          >
                            <img
                              alt="icon-arrow"
                              src="ic_carret_down.svg"
                              style={
                                Object {
                                  "transform": false,
                                  "transition": "all 0.3s ease",
                                }
                              }
                            />
                          </div>
                        </div>
                      </div>
                      <input
                        name="project"
                        type="hidden"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="o-footer_main_form_button mt-32"
                >
                  <button
                    className="a-button a-button-primary"
                    disabled={false}
                    type="submit"
                  >
                    Đăng Ký
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        className="o-footer_main_menu_bottom"
      >
        <div
          className="o-footer_main_menu_wrap"
        >
          <div
            className="o-footer_main_menu_title"
          >
            <p
              className="a-text a-text-white a-text-14x22 a-text-700 a-text-uppercase"
            >
              VỀ NOVALAND
            </p>
          </div>
          <ul
            className="o-footer_main_menu_list"
          >
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Giới thiệu chung
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Tầm nhìn - Sứ mệnh
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Lĩnh Vực Hoạt Động
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Lịch Sử Phát Triển
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Ban lãnh đạo
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Giải thưởng
                </p>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="o-footer_main_menu_wrap"
        >
          <div
            className="o-footer_main_menu_title"
          >
            <p
              className="a-text a-text-white a-text-14x22 a-text-700 a-text-uppercase"
            >
              CÁC THÔNG TIN VÀ DỰ ÁN MỚI
            </p>
          </div>
          <ul
            className="o-footer_main_menu_list"
          >
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Thông tin thị trường
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Thông tin Novaland
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Thông tin báo chí
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Bất động sản Trung Tâm 
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Đô Thị Vệ Tinh
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Đô Thị Nghỉ Dưỡng
                </p>
              </a>
            </li>
            <li
              className="o-footer_main_menu_nav"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <p
                  className="a-text a-text-lavenderGray a-text-400 a-text-inline"
                >
                  Bất Động Sản Công Nghiệp
                </p>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="o-footer_main_menu_wrap"
        >
          <div
            className="o-footer_main_menu_title"
          >
            <p
              className="a-text a-text-white a-text-14x22 a-text-700 a-text-uppercase"
            >
              THEO DÕI NOVALAND TRÊN
            </p>
          </div>
          <ul
            className="o-footer_main_menu_icon"
          >
            <div
              className="o-footer_main_menu_icon_item"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
                title="zalo"
              >
                <i
                  className="a-icon a-icon-zalo a-icon-40"
                />
              </a>
            </div>
            <div
              className="o-footer_main_menu_icon_item"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
                title="youtube"
              >
                <i
                  className="a-icon a-icon-youtube a-icon-40"
                />
              </a>
            </div>
            <div
              className="o-footer_main_menu_icon_item"
            >
              <a
                aria-current="page"
                className="a-link "
                href="/"
                onClick={[Function]}
                style={Object {}}
                target="_self"
                title="facebook"
              >
                <i
                  className="a-icon a-icon-facebook a-icon-40"
                />
              </a>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="o-footer_bottom"
  >
    <div
      className="container o-container"
    >
      <div
        className="o-footer_bottom_wrap"
      >
        <div
          className="o-footer_bottom_policy"
        >
          <div
            className="o-footer_bottom_policy_item"
          >
            <a
              aria-current="page"
              className="a-link "
              href="/"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <p
                className="a-text a-text-400 a-text-white a-text-opacity07"
              >
                Chính sách bảo mật
              </p>
            </a>
          </div>
          <div
            className="o-footer_bottom_policy_item"
          >
            <a
              aria-current="page"
              className="a-link "
              href="/"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <p
                className="a-text a-text-400 a-text-white a-text-opacity07"
              >
                Điều khoản khách hàng
              </p>
            </a>
          </div>
        </div>
        <div
          className="o-footer_bottom_copyright"
        >
          <p
            className="a-text a-text-400 a-text-white a-text-opacity07"
          >
            © 2021. Bản quyền thuộc về Tập đoàn Novaland (Việt Nam). Tất cả các quyền được bảo hộ.
          </p>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Storyshots Components/organisms/Form Normal 1`] = `
<div
  className="o-form"
/>
`;

exports[`Storyshots Components/organisms/Tabs Normal 1`] = `
<div
  style={
    Object {
      "background": "#bfbfbf",
    }
  }
>
  <div
    className="container o-container"
  >
    <div
      className="o-tabs"
    >
      <div
        className="o-tabs_labels"
      >
        <div
          className="o-tabs_tab o-tabs_tab-active"
          onClick={[Function]}
        >
          <span
            className="o-tabs_label"
          >
            Tin Tập Đoàn
          </span>
        </div>
        <div
          className="o-tabs_tab"
          onClick={[Function]}
        >
          <span
            className="o-tabs_label"
          >
            Tin Thị Trường
          </span>
        </div>
        <div
          className="o-tabs_tab"
          onClick={[Function]}
        >
          <span
            className="o-tabs_label"
          >
            Tin Dự án
          </span>
        </div>
      </div>
    </div>
    <div
      className="o-tabs_panel o-tabs_panel-active"
    >
      Content 1
    </div>
    <div
      className="o-tabs_panel"
    >
      Content 2
    </div>
    <div
      className="o-tabs_panel"
    >
      Content 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/templates/HomeNews Home News Card 1`] = `
<div
  style={
    Object {
      "margin": "30px",
      "maxWidth": "547px",
    }
  }
>
  <div
    className="t-homeNewsCard"
  >
    <div
      className="t-homeNewsCard_thumbnail"
    >
      <a
        aria-current="page"
        className="a-link "
        href="/"
        onClick={[Function]}
        style={Object {}}
        target="_self"
      >
        <div
          className="a-image a-image-1x1"
        >
          <img
            alt="HomeNewsCard"
            loading="lazy"
            src="img_homeNewsCard.png"
          />
        </div>
      </a>
    </div>
    <div
      className="t-homeNewsCard_wrapper"
    >
      <div
        className="t-homeNewsCard_title"
      >
        <a
          aria-current="page"
          className="a-link "
          href="/"
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          <p
            className="a-text a-text-16x24 a-text-600 a-text-arsenic"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Người dân TP.HCM đón Giáng sinh sớm, check-in cùng cây thông 25 m",
              }
            }
          />
        </a>
      </div>
      <div
        className="t-homeNewsCard_content"
      >
        <p
          className="a-text a-text-400 a-text-arsenic"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Còn hơn một tháng nữa mới đến Giáng sinh, nhưng Novaland Gallery đã trang hoàng một tháng nữa mới đến Giáng sinh",
            }
          }
        />
      </div>
      <div
        className="t-homeNewsCard_divider"
      />
      <div
        className="t-homeNewsCard_general"
      >
        <div
          className="t-homeNewsCard_date"
        >
          <p
            className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
            dangerouslySetInnerHTML={
              Object {
                "__html": "23/11/2021",
              }
            }
          />
        </div>
        <div
          className="t-homeNewsCard_view"
        >
          <span
            onClick={[Function]}
          >
            <i
              className="a-icon a-icon-eyeOpen a-icon-14"
            />
          </span>
          <div
            className="t-homeNewsCard_view_total"
          >
            <p
              className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
            >
              111
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/templates/HomeNews Normal 1`] = `
<div
  className="t-homeNews"
>
  <div
    className="container o-container"
  >
    <h2
      className="a-heading a-heading-32x48 a-heading-700 a-heading-uppercase a-heading-arsenic a-heading-center a-heading-fontNoto"
      dangerouslySetInnerHTML={
        Object {
          "__html": "TIN TỨC",
        }
      }
    />
    <div
      className="t-homeNews_wrapper"
    >
      <div
        className="o-tabs"
      >
        <div
          className="o-tabs_labels"
        >
          <div
            className="o-tabs_tab o-tabs_tab-active"
            onClick={[Function]}
          >
            <span
              className="o-tabs_label"
            >
              Tin Tập Đoàn
            </span>
          </div>
          <div
            className="o-tabs_tab"
            onClick={[Function]}
          >
            <span
              className="o-tabs_label"
            >
              Tin Thị Trường
            </span>
          </div>
          <div
            className="o-tabs_tab"
            onClick={[Function]}
          >
            <span
              className="o-tabs_label"
            >
              Tin Dự Án
            </span>
          </div>
        </div>
      </div>
      <div
        className="o-tabs_panel o-tabs_panel-active"
      >
        <div
          className="t-homeNews_content"
        >
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Người dân TP.HCM đón Giáng sinh sớm, check-in cùng cây thông 25 m",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Còn hơn một tháng nữa mới đến Giáng sinh, nhưng Novaland Gallery đã trang hoàng một tháng nữa mới đến Giáng sinh",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard2.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Sắp khởi công đường Hàm Kiệm – Tiến Thành",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Ban Quản lý Dự án và xây dựng công trình giao thông thuộc Sở Giao thông vận tải xây dựng công trình giao thông thuộc Sở Giao thông vận tải",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard3.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Nhiều hạng mục của sân bay Long Thành sẽ khởi công năm sau",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Báo cáo Quốc hội việc triển khai dự án sân bay Long Thành, Chính phủ cho biết mó hội việc triển khai dự án sân bay Long Thành, Chính phủ cho biết",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="o-tabs_panel"
      >
        <div
          className="t-homeNews_content"
        >
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Người dân TP.HCM đón Giáng sinh sớm, check-in cùng cây thông 25 m",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Còn hơn một tháng nữa mới đến Giáng sinh, nhưng Novaland Gallery đã trang hoàng một tháng nữa mới đến Giáng sinh",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard2.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Sắp khởi công đường Hàm Kiệm – Tiến Thành",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Ban Quản lý Dự án và xây dựng công trình giao thông thuộc Sở Giao thông vận tải xây dựng công trình giao thông thuộc Sở Giao thông vận tải",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard3.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Nhiều hạng mục của sân bay Long Thành sẽ khởi công năm sau",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Báo cáo Quốc hội việc triển khai dự án sân bay Long Thành, Chính phủ cho biết mó hội việc triển khai dự án sân bay Long Thành, Chính phủ cho biết",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard4.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Doanh nghiệp địa ốc bắt tay ngân hàng tăng lợi ích cho người mua",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Hợp tác giữa doanh nghiệp bất động sản và ngân hàng tạo giải pháp tín dụng giàu giữa doanh nghiệp bất động sản và ngân hàng tạo giải pháp tín dụng giàu",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="o-tabs_panel"
      >
        <div
          className="t-homeNews_content"
        >
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Người dân TP.HCM đón Giáng sinh sớm, check-in cùng cây thông 25 m",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Còn hơn một tháng nữa mới đến Giáng sinh, nhưng Novaland Gallery đã trang hoàng một tháng nữa mới đến Giáng sinh",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="t-homeNews_item"
          >
            <div
              className="t-homeNewsCard"
            >
              <div
                className="t-homeNewsCard_thumbnail"
              >
                <a
                  aria-current="page"
                  className="a-link "
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                  target="_self"
                >
                  <div
                    className="a-image a-image-1x1"
                  >
                    <img
                      alt="HomeNewsCard"
                      loading="lazy"
                      src="img_homeNewsCard2.png"
                    />
                  </div>
                </a>
              </div>
              <div
                className="t-homeNewsCard_wrapper"
              >
                <div
                  className="t-homeNewsCard_title"
                >
                  <a
                    aria-current="page"
                    className="a-link "
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                    target="_self"
                  >
                    <p
                      className="a-text a-text-16x24 a-text-600 a-text-arsenic"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Sắp khởi công đường Hàm Kiệm – Tiến Thành",
                        }
                      }
                    />
                  </a>
                </div>
                <div
                  className="t-homeNewsCard_content"
                >
                  <p
                    className="a-text a-text-400 a-text-arsenic"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Ban Quản lý Dự án và xây dựng công trình giao thông thuộc Sở Giao thông vận tải xây dựng công trình giao thông thuộc Sở Giao thông vận tải",
                      }
                    }
                  />
                </div>
                <div
                  className="t-homeNewsCard_divider"
                />
                <div
                  className="t-homeNewsCard_general"
                >
                  <div
                    className="t-homeNewsCard_date"
                  >
                    <p
                      className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "23/11/2021",
                        }
                      }
                    />
                  </div>
                  <div
                    className="t-homeNewsCard_view"
                  >
                    <span
                      onClick={[Function]}
                    >
                      <i
                        className="a-icon a-icon-eyeOpen a-icon-14"
                      />
                    </span>
                    <div
                      className="t-homeNewsCard_view_total"
                    >
                      <p
                        className="a-text a-text-12x17 a-text-400 a-text-ls-005 a-text-arsenic a-text-fontLato"
                      >
                        111
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="t-homeNews_button"
      >
        <button
          className="a-button a-button-outline"
          disabled={false}
          type="button"
        >
          Xem tất cả bài viết
        </button>
      </div>
    </div>
  </div>
</div>
`;
